--- a/app_quiz/templates/quiz_course.html
+++ b/app_quiz/templates/quiz_course.html
@@ -144,8 +144,7 @@
 
 {% block scripts %}
 
-<link href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" rel="stylesheet">
-</link>
+  <link href="{% static "/plugins/jquery/jquery-ui.css" %}" rel="stylesheet">
 
 <style>
     .buttons {
