--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -5,38 +5,137 @@
 {% block content %}
 
 <div class="mt-3 d-sm-flex align-items-center justify-content-between mb-4 p-2">
-    <h1 class="h3 mb-0 text-gray-800">My Courses</h1>
-    <a href="{% url "course_create" %}" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-            class="fas fa-add"></i> Create New Course</a>
+  <h1 class="h3 mb-0 text-gray-800">My Courses</h1>
+  <a href="{% url "course_create" %}" class="d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
+      class="fas fa-add"></i> Create New Course</a>
 </div>
 <div class="row">
-    {% for course in object_list %}
-    <div class="col-md-4">
-        <div class="card">
-            <div class="card-body">
-                <h5 class="card-title">{{ course.title }}</h5>
+  {% for course in object_list %}
+  <div class="col-md-4">
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title" pk="{{course.id}}">{{ course.title }}</h5>
 
-                <p>
-                    <a class="badge badge-info px-3 py-1 mx-1" href="{% url "course_edit" course.id %}">Edit</a>
-                    
-                    <a class="badge badge-warning px-3 py-1  mx-1" href="{% url "course_module_update" course.id %}">Manage Modules</a>
-                    {% if course.modules.count > 0 %}
-                    <a class="badge badge-success px-3 py-1  mx-1" 
-                        href="{% url "module_content_list" course.modules.first.id %}">Manage Contents</a>
-                    {% endif %}
-                </p>
+        <p>
+          <a class="badge badge-info px-3 py-1 mx-1" href="{% url "course_edit" course.id %}">Edit</a>
 
-                <p>
-                    <a class="badge badge-primary px-3 py-1 mx-1" href="{% url "quiz_course" course.id %}">Quiz</a>
-                    <a class="badge badge-danger px-3 py-1 mx-1" href="{% url "course_delete" course.id %}">Delete Course</a>
-                </p>
-            </div>
-        </div>
+          <a class="badge badge-warning px-3 py-1  mx-1" href="{% url "course_module_update" course.id %}">Manage
+            Modules</a>
+          {% if course.modules.count > 0 %}
+          <a class="badge badge-success px-3 py-1  mx-1"
+            href="{% url "module_content_list" course.modules.first.id %}">Manage Contents</a>
+          {% endif %}
+        </p>
+
+        <p>
+          <a class="badge badge-primary px-3 py-1 mx-1 link-copy" href="javascript:void(0);" pk="{{course.id}}">Make
+            Copy</a>
+          <a class="badge badge-primary px-3 py-1 mx-1 d-none" href="{% url "quiz_course" course.id %}">Quiz</a>
+          <a class="badge badge-danger px-3 py-1 mx-1" href="{% url "course_delete" course.id %}">Delete Course</a>
+        </p>
+      </div>
     </div>
-    {% empty %}
-    <p>You haven't created any courses yet.</p>
-    {% endfor %}
+  </div>
+  {% empty %}
+  <p>You haven't created any courses yet.</p>
+  {% endfor %}
 
 </div>
+
+<div id="copyModal" class="modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Copy Course</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="post" action="{% url 'course_copy' %}">
+
+          {% csrf_token %}
+
+          <input type="text" class="form-control" id="id" name="id" value="" />
+
+          <div class="form-group">
+            <label for="exampleInputEmail1">Course Name</label>
+            <input type="text" class="form-control" id="name" name="name" placeholder="Course Name..">
+          </div>
+
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" id="btnCreateCopy">Create Copy</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
+
+
+{% block scripts %}
+
+<script>
+  $(document).ready(function () {
+
+    $(".link-copy").click(function (event) {
+      event.stopPropagation();
+
+      var id = $(this).attr('pk');
+
+      if (id) {
+        var title = $(".card-title[pk='" + id + "']").text();
+
+        $("#copyModal #id").val(id);
+        $("#copyModal #name").val($.trim(title) + " Copy");
+
+        $("#copyModal").modal('show');
+      }
+
+
+    });
+
+    $("#btnCreateCopy").click(function (event) {
+      event.stopPropagation();
+
+      $('#copyModal form').submit();
+
+    });
+
+    $('#copyModal form').ajaxForm({
+      beforeSubmit: function () {
+        var load =
+          '<span class="spinner-border spinner-border-sm mr-1" role="status" aria-hidden="true"></span>';
+        load = load + 'Creating...';
+        $("#btnCreateCopy").html(load);
+        $('#copyModal button').attr('disabled', true);
+
+      },
+      success: function (response) {
+
+        if (response > 0) {
+          toastr.success('Course copy has been created');
+          window.location.reload();
+        } else {
+
+          $("#copyModal").modal('hide');
+          $("#btnCreateCopy").html('Create Copy');
+          $('#copyModal button').attr('disabled', false);
+          $("#copyModal #id").val(null);
+          $("#copyModal #name").val(null);
+
+          toastr.error('Sorry, We are failed to created the copy. Kindly refresh the page and try again.');
+
+        }
+
+
+      }
+    });
+
+  });
+</script>
 
 {% endblock %}
