--- a/app_teachers/templates/teacher_base.html
+++ b/app_teachers/templates/teacher_base.html
@@ -5,13 +5,11 @@
 <head>
   <meta charset="utf-8" />
   <title>NYC - {% block title %}{% endblock %}</title>
-  <link href="{% static "/css/bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "plugins/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/font-awesome.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/teacher.css" %}" rel="stylesheet">
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-  </link>
-
+  <link rel="stylesheet" href="{% static "/plugins/toastr/toastr.min.css" %}">
   <link href="{% static "/plugins/summernote/summernote.min.css" %}" rel="stylesheet">
 
   <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/logo5.png" %}">
@@ -33,9 +31,9 @@
       <ul class="navbar-nav ml-auto">
 
         <li class=" nav-item"><a class="nav-link  btn btn-sm btn-outline-success" href="/">
-          Back to Site
-        </a>
-      </li>
+            Back to Site
+          </a>
+        </li>
 
         {% if request.user.is_authenticated and request.user.is_teacher == True %}
         <li class="nav-item">
@@ -47,24 +45,24 @@
         </li>
         {% endif %}
 
-       
+
 
         <li class=" nav-item notification dropdown ml-3">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <span class="badge badge-danger badge-counter">0+</span>
             <i class="fa fa-lg fa-bell-o text-dark"></i></a>
-            <div class="dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
-              <h6 class="dropdown-header">
-                Alerts
-              </h6>
-              <div id="pending-notify-list"></div>
-            </div>
-          
+          <div class="dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
+            <h6 class="dropdown-header">
+              Alerts
+            </h6>
+            <div id="pending-notify-list"></div>
+          </div>
+
         </li>
         <li class="nav-item dropdown ml-3">
-          
+
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
-           
+
             <i class="fa fa-lg fa-cog text-dark"></i> {{ request.user }}
           </a>
           <div class="dropdown-menu dropdown-menu-right">
@@ -87,7 +85,7 @@
 
   {% verbatim %}
   <script type="text/x-handlebars-template" id='notificationItemTemplate'>
-  <a class="dropdown-item d-flex align-items-center" href="{{action_target}}">
+    <a class="dropdown-item d-flex align-items-center" href="{{action_target}}">
       <div class="mr-3">
           <div class="icon-circle bg-primary">
               <i class="fa fa-exclamation text-white"></i>
@@ -101,80 +99,73 @@
 </script>
   {% endverbatim %}
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
-  <script src="https://unpkg.com/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-
+  <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
+  <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
+  <script src="{% static "/plugins/bootstrap/bootstrap.min.js" %}"></script>
+  <script src="{% static "/plugins/popper.min.js" %}"></script>
   <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"
-    integrity="sha256-5oApc/wMda1ntIEK4qoWJ4YItnV4fBHMwywunj8gPqc=" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+  <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
+  <script src="{% static "/plugins/moment.min.js" %}"></script>
+  <script src="{% static "/plugins/handlebars.min.js" %}"></script>
+  <script src="{% static "/plugins/scroll/jquery.scrollbar.min.js" %}"></script>
+  <script src="{% static "/plugins/summernote/summernote.min.js" %}"></script>
+  <script src="{% static "/plugins/jquery.form.min.js" %}"></script>
 
   <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
-
-  <script src="{% static "/plugins/summernote/summernote.min.js" %}"></script>
 
   {% block scripts %}
   {% endblock %}
 
   <script>
-   
     Handlebars.registerHelper("dateOnly", function (options) {
-        var data = options.fn(this);
+      var data = options.fn(this);
 
-        try {
-            var date = moment($.trim(data)).format('MMMM, DD, YYYY');
-            return new Handlebars.SafeString(date);
+      try {
+        var date = moment($.trim(data)).format('MMMM, DD, YYYY');
+        return new Handlebars.SafeString(date);
 
-        } catch (e) {
+      } catch (e) {
 
-        }
+      }
 
-        return options.fn(this);
+      return options.fn(this);
     });
 
     var pendingNotifyList = [];
 
     var getPendingNotifications = function () {
 
-        $.get('/api/notifications/?format=json', { status: 'pending' }, function (response) {
-            pendingNotifyList = response;
+      $.get('/api/notifications/?format=json', {
+        status: 'pending'
+      }, function (response) {
+        pendingNotifyList = response;
 
-            $(".notification .badge-counter").html('+' + pendingNotifyList.length);
+        $(".notification .badge-counter").html('+' + pendingNotifyList.length);
 
-            $("#pending-notify-list").empty();
+        $("#pending-notify-list").empty();
 
-            $(pendingNotifyList).each(function (index, item) {
+        $(pendingNotifyList).each(function (index, item) {
 
-                var source = document.getElementById("notificationItemTemplate").innerHTML;
-                var template = Handlebars.compile(source);
+          var source = document.getElementById("notificationItemTemplate").innerHTML;
+          var template = Handlebars.compile(source);
 
-                $("#pending-notify-list").append(template(item));
-            });
+          $("#pending-notify-list").append(template(item));
         });
+      });
 
     };
 
     var poolingNotifications = function () {
-        setInterval(function () {
-            getPendingNotifications();
-        }, 60000);
+      setInterval(function () {
+        getPendingNotifications();
+      }, 60000);
     };
 
     $(document).ready(function () {
-        getPendingNotifications();
-        poolingNotifications();
+      //getPendingNotifications();
+      //poolingNotifications();
     });
-
-</script>
+  </script>
 </body>
 
 </html>
