--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -4,17 +4,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>EDUCA - {% block title %}{% endblock %}</title>
+  <title>{% block title %}{% endblock %}</title>
   <link href="{% static "/css/bootstrap.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/font-awesome.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/teacher.css" %}" rel="stylesheet">
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
   <link href="{% static "/plugins/scroll/jquery.scrollbar.css" %}" rel="stylesheet">
+  <link href="{% static "/plugins/toastr/toastr.min.css" %}" rel="stylesheet" >
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
-  </link>
-
-  <link rel="icon" type="image/png" sizes="192x192" href="{% static "/images/apple-icon.png" %}">
+  <link rel="icon" type="image/png" href="{% static '/images/logo5.png' %}">
 
   <style>
 
@@ -34,9 +32,9 @@
       <ul class="navbar-nav ml-auto">
 
         <li class=" nav-item"><a class="nav-link text-white btn btn-sm btn-outline-success" href="/">
-          Back to Site
-        </a>
-      </li>
+            Back to Site
+          </a>
+        </li>
 
         <li class="nav-item"><a class="nav-link text-white" href="{% url "live_classes" %}">Live Courses</a></li>
 
@@ -45,13 +43,14 @@
         <li class="nav-item"><a class="nav-link text-white" href="{% url "messages" %}">Messages</a></li>
         <li class="nav-item"><a class="nav-link text-white" href="{% url "video_rooms" %}">Conferences</a></li>
 
-      
+
 
         <li class=" nav-item notification dropdown ml-3">
           <a class="nav-link" data-toggle="dropdown" href="#">
             <span class="badge badge-danger badge-counter">0+</span>
             <i class="fa fa-lg fa-bell-o text-white"></i></a>
-          <div style="max-height: 500px; overflow-y: auto;" class="dropdown-list dropdown-menu dropdown-menu-right" aria-labelledby="alertsDropdown">
+          <div style="max-height: 500px; overflow-y: auto;" class="dropdown-list dropdown-menu dropdown-menu-right"
+            aria-labelledby="alertsDropdown">
             <h6 class="dropdown-header">
               Alerts
             </h6>
@@ -87,7 +86,7 @@
 
   {% verbatim %}
   <script type="text/x-handlebars-template" id='notificationItemTemplate'>
-  <a class="dropdown-item d-flex align-items-center" href="{{action_target}}">
+    <a class="dropdown-item d-flex align-items-center" href="{{action_target}}">
       <div class="mr-3">
           <div class="icon-circle bg-primary">
               <i class="fa fa-exclamation text-white"></i>
@@ -101,31 +100,22 @@
 </script>
   {% endverbatim %}
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-
+  <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
+  <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
+  <script src="{% static "/plugins/bootstrap/bootstrap.min.js" %}"></script>
   <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
+  <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"
-    integrity="sha256-5oApc/wMda1ntIEK4qoWJ4YItnV4fBHMwywunj8gPqc=" crossorigin="anonymous"></script>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+  <script src="{% static "/plugins/moment.min.js" %}"></script>
+  <script src="{% static "/plugins/handlebars.min.js" %}"></script>
+  <script src="{% static "/plugins/scroll/jquery.scrollbar.min.js" %}"></script>
 
   <script src="//media.twiliocdn.com/sdk/js/video/releases/2.4.0/twilio-video.min.js"></script>
-
-  <script src="{% static "/plugins/scroll/jquery.scrollbar.min.js" %}"></script>
 
   {% block scripts %}
   {% endblock %}
 
   <script>
-
     Handlebars.registerHelper("dateOnly", function (options) {
       var data = options.fn(this);
 
@@ -144,7 +134,9 @@
 
     var getPendingNotifications = function () {
 
-      $.get('/api/notifications/?format=json', { status: 'pending' }, function (response) {
+      $.get('/api/notifications/?format=json', {
+        status: 'pending'
+      }, function (response) {
         pendingNotifyList = response;
 
         $(".notification .badge-counter").html('+' + pendingNotifyList.length);
@@ -172,7 +164,6 @@
       getPendingNotifications();
       poolingNotifications();
     });
-
   </script>
 </body>
 
