--- a/students/templates/student_base.html
+++ b/students/templates/student_base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <title>{% block title %}{% endblock %}</title>
-  <link href="{% static "/css/bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "plugins/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/font-awesome.min.css" %}" rel="stylesheet">
   <link href="{% static "/css/teacher.css" %}" rel="stylesheet">
   <link href="{% static "/pickadate/jquery.datetimepicker.min.css" %}" rel="stylesheet">
@@ -102,7 +102,7 @@
 
   <script src="{% static "/plugins/jquery/jquery.min.js" %}"></script>
   <script src="{% static "/plugins/jquery/jquery-ui.min.js" %}"></script>
-  <script src="{% static "/plugins/bootstrap/bootstrap.min.js" %}"></script>
+  <script src="{% static "/plugins/bootstrap/js/bootstrap.min.js" %}"></script>
   <script src="{% static "/pickadate/jquery.datetimepicker.full.min.js" %}"></script>
   <script src="{% static "/plugins/toastr/toastr.min.js" %}"></script>
 
