--- a/app_teachers/templates/manage/course/list.html
+++ b/app_teachers/templates/manage/course/list.html
@@ -56,7 +56,7 @@
 
           {% csrf_token %}
 
-          <input type="text" class="form-control" id="id" name="id" value="" />
+          <input type="hidden" class="form-control" id="id" name="id" value="" />
 
           <div class="form-group">
             <label for="exampleInputEmail1">Course Name</label>
